# pathTracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  exampleUSD.usda  main.cpp  pathTracer.code-workspace  scene.cpp  scene.h
dependencies/: installEigen.sh  installUSD.sh
examples/: combined.blend  combined.usda  cornell.blend  cornell.usda  cube.blend  cube.usda  icoSphere.blend  icoSphere.usda  icosphere.usda  simpleScene1.blend  simpleScene1.usda  testLight.blend  testLight.usda  test_acceleration.blend  test_acceleration.usda  triangle.blend  triangle.usda
sources/: accelerator.cpp  accelerator.h  baseIntegrator.h  globalIlumIntegrator.cpp  globalIlumIntegrator.h  helpers.cpp  helpers.h  integrator.cpp  integrator.h  main.cpp  raytracer.cpp  raytracer.h  renderSettings.h  scene.cpp  scene.h
sources/integrators/: debugAccIntegrator.cpp  debugAccIntegrator.h  directLightIntegrator.cpp  directLightIntegrator.h  facingRatioIntegrator.cpp  facingRatioIntegrator.h  globalIlumIntegrator.cpp  globalIlumIntegrator.h  normalIntegrator.h
src/: accelerator.cpp  accelerator.h  helpers.h  main.cpp  math.h  normalIntegrator.cpp  normalIntegrator.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h
src/integrators/: baseIntegrator.h  debugAccIntegrator.cpp  directLightIntegrator.cpp  directLightIntegrator.h  facingRatioIntegrator.cpp  normalIntegrator.cpp  normalIntegrator.h
tests/: CMakeLists.txt  test_accelerator.cpp  test_raytracer.cpp
